fix: notification position on mobile, some russian text on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -95,6 +95,7 @@ svg.outline path{
   right: 20px;
   display: flex;
   flex-direction: column;
+  justify-self: end;
   gap: 10px;
   z-index: 9999;
   max-width: 400px;
