--- a/src/components/AddPostForm/style.css
+++ b/src/components/AddPostForm/style.css
@@ -85,6 +85,11 @@
   gap: 24px;
 }
 
+.upload-area>svg {
+  width: 36px;
+  height: 36px;
+}
+
 .upload-area:hover {
   border: 2px solid var(--gray-400);
 }
@@ -138,18 +143,19 @@
   transition: 0.2s ease-in;
 }
 
-.create-post-container{
+.create-post-container {
   display: flex;
   justify-content: flex-end;
 }
 
 
 @media (max-width: 768px) {
-  .form-header h2{
+  .form-header h2 {
     font-size: 16px;
     font-weight: 400;
   }
-  .form-header .close-form-button{
+
+  .form-header .close-form-button {
     font-size: 24px;
   }
 
@@ -165,5 +171,23 @@
   #add-post .form-group textarea,
   #add-post .upload-area {
     max-width: 100%;
+  }
+
+  .upload-area {
+    padding: 8px 12px 8px 16px;
+    gap: 12px;
+    height: auto;
+  }
+
+  .upload-content {
+    font-size: 12px;
+    align-self: center;
+    line-height: 2;
+    height: auto;
+  }
+
+  .upload-area>svg {
+    width: 27px;
+    height: 27px;
   }
 }
