--- a/src/components/Profile/style.css
+++ b/src/components/Profile/style.css
@@ -1,13 +1,17 @@
 .profile{
   margin: 0 auto;
   justify-content: space-between;
-  width: 1200px;
+  max-width: 1200px;
   display: flex;
 }
 
-.profile>div{
+.edit-profile{
   min-height: 640px;
   width: 575px;
+}
+.preferences{
+  min-height: 640px;
+  max-width: 575px;
 }
 
 .edit-profile h1, .preferences h1 {
@@ -98,6 +102,7 @@
 
 #profile-form .save-btn{
   width: 244px;
+  margin-bottom: 20px;
 }
 
 .logout-button{
